Fix stylesheet fuck up for whitespace

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -35,6 +35,7 @@ code {
     color: #242626;
     background-color: #e1e2e1;
     text-shadow: none;
+    white-space: pre;
 }
 
 pre {
